// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InstructorHomePageComponent > should snap when courses are still loading 1`] = `
<tm-instructor-home-page
  SessionsTableColumn={[Function Object]}
  SortBy={[Function Object]}
  SortableTableHeaderColorScheme={[Function Object]}
  allCoursesList={[Function Array]}
  copyProgressPercentage="0"
  courseService={[Function _CourseService]}
  courseTabModels={[Function Array]}
  coursesOfModifiedSession={[Function Array]}
  failedToCopySessions={[Function Object]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasCoursesLoaded="false"
  hasCoursesLoadingFailed="false"
  initialSortBy={[Function Number]}
  instructorCoursesSortBy={[Function Number]}
  instructorService={[Function _InstructorService]}
  isCopyLoading="false"
  isCopyingCourse="false"
  isNewUser="false"
  isResultActionLoading="false"
  isSendReminderLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  sortOrder="0"
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <h1>
    Home
  </h1><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-instructor-home-page>
`;

exports[`InstructorHomePageComponent > should snap with default fields 1`] = `
<tm-instructor-home-page
  SessionsTableColumn={[Function Object]}
  SortBy={[Function Object]}
  SortableTableHeaderColorScheme={[Function Object]}
  allCoursesList={[Function Array]}
  copyProgressPercentage="0"
  courseService={[Function _CourseService]}
  courseTabModels={[Function Array]}
  coursesOfModifiedSession={[Function Array]}
  failedToCopySessions={[Function Object]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasCoursesLoaded="false"
  hasCoursesLoadingFailed="false"
  initialSortBy={[Function Number]}
  instructorCoursesSortBy={[Function Number]}
  instructorService={[Function _InstructorService]}
  isCopyLoading="false"
  isCopyingCourse="false"
  isNewUser="false"
  isResultActionLoading="false"
  isSendReminderLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  sortOrder="0"
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <h1>
    Home
  </h1><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-instructor-home-page>
`;

exports[`InstructorHomePageComponent > should snap with one course with error loading feedback sessions 1`] = `
<tm-instructor-home-page
  SessionsTableColumn={[Function Object]}
  SortBy={[Function Object]}
  SortableTableHeaderColorScheme={[Function Object]}
  allCoursesList={[Function Array]}
  copyProgressPercentage="0"
  courseService={[Function _CourseService]}
  courseTabModels={[Function Array]}
  coursesOfModifiedSession={[Function Array]}
  failedToCopySessions={[Function Object]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasCoursesLoaded={[Function Boolean]}
  hasCoursesLoadingFailed="false"
  initialSortBy={[Function Number]}
  instructorCoursesSortBy={[Function Number]}
  instructorService={[Function _InstructorService]}
  isCopyLoading="false"
  isCopyingCourse="false"
  isNewUser="false"
  isResultActionLoading="false"
  isSendReminderLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  sortOrder="0"
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <h1>
    Home
  </h1><div
    class="row mb-3"
  >
    <div
      class="col-4 mt-auto"
    >
      <a
        class="btn btn-success"
        href="/web/instructor/courses?isAddNewCourse=true"
        tmrouterlink="/web/instructor/courses"
      >
        <i
          class="fas fa-plus"
        />
         Add New Course 
      </a>
    </div>
    <div
      class="col-8"
    >
      <div
        class="float-end"
      >
        <strong
          class="d-inline"
        >
           Sort By: 
        </strong>
        <div
          class="btn-group"
          data-toggle="buttons"
        >
          <button
            class="btn btn-light"
            id="sort-course-id"
          >
             Course ID 
          </button>
          <button
            class="btn btn-light"
            id="sort-course-name"
          >
             Course Name 
          </button>
          <button
            class="btn btn-light"
            disabled=""
            id="sort-course-date"
          >
             Creation Date 
          </button>
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div>
        <div
          class="card"
          id="course-tab-0"
        >
          <div
            class="card-header bg-primary text-white cursor-pointer"
          >
            <b
              class="course-details text-break"
            >
              [CS3281]: Thematic Systems I
            </b>
          </div>
          <div
            class="card-body padding-0 table-responsive collapse show"
          >
            <tm-loading-retry>
              <div
                aria-hidden="true"
              />
              <tm-loading-spinner>
                <div
                  class="loading-container"
                >
                  <div
                    class="row spinner-border text-primary"
                    role="status"
                  />
                  <div
                    class="row text-secondary"
                  >
                    Loading...
                  </div>
                </div>
              </tm-loading-spinner>
            </tm-loading-retry>
          </div>
        </div>
      </div>
    </div>
  </tm-loading-retry>
</tm-instructor-home-page>
`;

exports[`InstructorHomePageComponent > should snap with one course with unexpanded course tab 1`] = `
<tm-instructor-home-page
  SessionsTableColumn={[Function Object]}
  SortBy={[Function Object]}
  SortableTableHeaderColorScheme={[Function Object]}
  allCoursesList={[Function Array]}
  copyProgressPercentage="0"
  courseService={[Function _CourseService]}
  courseTabModels={[Function Array]}
  coursesOfModifiedSession={[Function Array]}
  failedToCopySessions={[Function Object]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasCoursesLoaded={[Function Boolean]}
  hasCoursesLoadingFailed="false"
  initialSortBy={[Function Number]}
  instructorCoursesSortBy={[Function Number]}
  instructorService={[Function _InstructorService]}
  isCopyLoading="false"
  isCopyingCourse="false"
  isNewUser="false"
  isResultActionLoading="false"
  isSendReminderLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  sortOrder="0"
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <h1>
    Home
  </h1><div
    class="row mb-3"
  >
    <div
      class="col-4 mt-auto"
    >
      <a
        class="btn btn-success"
        href="/web/instructor/courses?isAddNewCourse=true"
        tmrouterlink="/web/instructor/courses"
      >
        <i
          class="fas fa-plus"
        />
         Add New Course 
      </a>
    </div>
    <div
      class="col-8"
    >
      <div
        class="float-end"
      >
        <strong
          class="d-inline"
        >
           Sort By: 
        </strong>
        <div
          class="btn-group"
          data-toggle="buttons"
        >
          <button
            class="btn btn-light"
            id="sort-course-id"
          >
             Course ID 
          </button>
          <button
            class="btn btn-light"
            id="sort-course-name"
          >
             Course Name 
          </button>
          <button
            class="btn btn-light"
            disabled=""
            id="sort-course-date"
          >
             Creation Date 
          </button>
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div>
        <div
          class="card"
          id="course-tab-0"
        >
          <div
            class="card-header bg-primary text-white cursor-pointer"
          >
            <b
              class="course-details text-break"
            >
              [CS3281]: Thematic Systems I
            </b>
            <div
              class="card-header-btn-toolbar flex-lg-shrink-0"
            >
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Students
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/details?courseid=CS3281"
                    tmrouterlink="/web/instructor/courses/details"
                  >
                     View / Edit 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Instructors
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/edit?courseid=CS3281"
                    tmrouterlink="/web/instructor/courses/edit"
                  >
                     View / Edit 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Sessions
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/sessions?courseid=CS3281"
                    tmrouterlink="/web/instructor/sessions"
                  >
                     Add 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn-course btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Course
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/edit?courseid=CS3281"
                    tmrouterlink="/web/instructor/courses/edit"
                  >
                     View / Edit 
                  </a>
                  <a
                    class="btn-copy-course btn btn-light btn-sm dropdown-item"
                    href="/"
                    ngbtooltip="Copy the course and its corresponding sessions"
                    tmrouterlink="./"
                  >
                     Copy 
                  </a>
                  <a
                    class="btn-delete-course btn btn-light btn-sm dropdown-item"
                    href="/"
                    ngbtooltip="Delete the course and its corresponding students and sessions"
                    tmrouterlink="./"
                  >
                     Delete 
                  </a>
                </div>
              </span>
              <tm-panel-chevron>
                <button
                  aria-expanded="false"
                  aria-label="Expand panel"
                  class="chevron btn-course btn btn-primary btn-sm"
                  type="button"
                >
                  <i
                    class="fas fa-chevron-down"
                    style="color: white;"
                  />
                </button>
              </tm-panel-chevron>
            </div>
          </div>
          <div
            class="card-body padding-0 table-responsive collapse"
          >
            <tm-loading-retry>
              <div
                aria-hidden="true"
              />
              <tm-loading-spinner>
                <div
                  class="loading-container"
                >
                  <div
                    class="row spinner-border text-primary"
                    role="status"
                  />
                  <div
                    class="row text-secondary"
                  >
                    Loading...
                  </div>
                </div>
              </tm-loading-spinner>
            </tm-loading-retry>
          </div>
        </div>
      </div>
    </div>
  </tm-loading-retry>
</tm-instructor-home-page>
`;

exports[`InstructorHomePageComponent > should snap with one course with unpopulated feedback sessions 1`] = `
<tm-instructor-home-page
  SessionsTableColumn={[Function Object]}
  SortBy={[Function Object]}
  SortableTableHeaderColorScheme={[Function Object]}
  allCoursesList={[Function Array]}
  copyProgressPercentage="0"
  courseService={[Function _CourseService]}
  courseTabModels={[Function Array]}
  coursesOfModifiedSession={[Function Array]}
  failedToCopySessions={[Function Object]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasCoursesLoaded={[Function Boolean]}
  hasCoursesLoadingFailed="false"
  initialSortBy={[Function Number]}
  instructorCoursesSortBy={[Function Number]}
  instructorService={[Function _InstructorService]}
  isCopyLoading="false"
  isCopyingCourse="false"
  isNewUser="false"
  isResultActionLoading="false"
  isSendReminderLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  sortOrder="0"
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <h1>
    Home
  </h1><div
    class="row mb-3"
  >
    <div
      class="col-4 mt-auto"
    >
      <a
        class="btn btn-success"
        href="/web/instructor/courses?isAddNewCourse=true"
        tmrouterlink="/web/instructor/courses"
      >
        <i
          class="fas fa-plus"
        />
         Add New Course 
      </a>
    </div>
    <div
      class="col-8"
    >
      <div
        class="float-end"
      >
        <strong
          class="d-inline"
        >
           Sort By: 
        </strong>
        <div
          class="btn-group"
          data-toggle="buttons"
        >
          <button
            class="btn btn-light"
            id="sort-course-id"
          >
             Course ID 
          </button>
          <button
            class="btn btn-light"
            id="sort-course-name"
          >
             Course Name 
          </button>
          <button
            class="btn btn-light"
            disabled=""
            id="sort-course-date"
          >
             Creation Date 
          </button>
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div>
        <div
          class="card"
          id="course-tab-0"
        >
          <div
            class="card-header bg-primary text-white cursor-pointer"
          >
            <b
              class="course-details text-break"
            >
              [CS3281]: Thematic Systems I
            </b>
            <div
              class="card-header-btn-toolbar flex-lg-shrink-0"
            >
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Students
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/details?courseid=CS3281"
                    tmrouterlink="/web/instructor/courses/details"
                  >
                     View / Edit 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Instructors
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/edit?courseid=CS3281"
                    tmrouterlink="/web/instructor/courses/edit"
                  >
                     View / Edit 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Sessions
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/sessions?courseid=CS3281"
                    tmrouterlink="/web/instructor/sessions"
                  >
                     Add 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn-course btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Course
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/edit?courseid=CS3281"
                    tmrouterlink="/web/instructor/courses/edit"
                  >
                     View / Edit 
                  </a>
                  <a
                    class="btn-copy-course btn btn-light btn-sm dropdown-item"
                    href="/"
                    ngbtooltip="Copy the course and its corresponding sessions"
                    tmrouterlink="./"
                  >
                     Copy 
                  </a>
                  <a
                    class="btn-delete-course btn btn-light btn-sm dropdown-item"
                    href="/"
                    ngbtooltip="Delete the course and its corresponding students and sessions"
                    tmrouterlink="./"
                  >
                     Delete 
                  </a>
                </div>
              </span>
              <tm-panel-chevron>
                <button
                  aria-expanded="true"
                  aria-label="Expand panel"
                  class="chevron btn-course btn btn-primary btn-sm"
                  type="button"
                >
                  <i
                    class="fas fa-chevron-up"
                    style="color: white;"
                  />
                </button>
              </tm-panel-chevron>
            </div>
          </div>
          <div
            class="card-body padding-0 table-responsive collapse show"
          >
            <tm-loading-retry>
              <div
                aria-hidden="true"
              />
              <tm-loading-spinner>
                <div
                  class="loading-container"
                >
                  <div
                    class="row spinner-border text-primary"
                    role="status"
                  />
                  <div
                    class="row text-secondary"
                  >
                    Loading...
                  </div>
                </div>
              </tm-loading-spinner>
            </tm-loading-retry>
          </div>
        </div>
      </div>
    </div>
  </tm-loading-retry>
</tm-instructor-home-page>
`;

exports[`InstructorHomePageComponent > should snap with one course without feedback session 1`] = `
<tm-instructor-home-page
  SessionsTableColumn={[Function Object]}
  SortBy={[Function Object]}
  SortableTableHeaderColorScheme={[Function Object]}
  allCoursesList={[Function Array]}
  copyProgressPercentage="0"
  courseService={[Function _CourseService]}
  courseTabModels={[Function Array]}
  coursesOfModifiedSession={[Function Array]}
  failedToCopySessions={[Function Object]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasCoursesLoaded={[Function Boolean]}
  hasCoursesLoadingFailed="false"
  initialSortBy={[Function Number]}
  instructorCoursesSortBy={[Function Number]}
  instructorService={[Function _InstructorService]}
  isCopyLoading="false"
  isCopyingCourse="false"
  isNewUser="false"
  isResultActionLoading="false"
  isSendReminderLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  sortOrder="0"
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <h1>
    Home
  </h1><div
    class="row mb-3"
  >
    <div
      class="col-4 mt-auto"
    >
      <a
        class="btn btn-success"
        href="/web/instructor/courses?isAddNewCourse=true"
        tmrouterlink="/web/instructor/courses"
      >
        <i
          class="fas fa-plus"
        />
         Add New Course 
      </a>
    </div>
    <div
      class="col-8"
    >
      <div
        class="float-end"
      >
        <strong
          class="d-inline"
        >
           Sort By: 
        </strong>
        <div
          class="btn-group"
          data-toggle="buttons"
        >
          <button
            class="btn btn-light"
            id="sort-course-id"
          >
             Course ID 
          </button>
          <button
            class="btn btn-light"
            id="sort-course-name"
          >
             Course Name 
          </button>
          <button
            class="btn btn-light"
            disabled=""
            id="sort-course-date"
          >
             Creation Date 
          </button>
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div>
        <div
          class="card"
          id="course-tab-0"
        >
          <div
            class="card-header bg-primary text-white cursor-pointer"
          >
            <b
              class="course-details text-break"
            >
              [CS1231]: Discrete Structures
            </b>
            <div
              class="card-header-btn-toolbar flex-lg-shrink-0"
            >
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Students
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/enroll?courseid=CS1231"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/details?courseid=CS1231"
                    tmrouterlink="/web/instructor/courses/details"
                  >
                     View / Edit 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Instructors
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/edit?courseid=CS1231"
                    tmrouterlink="/web/instructor/courses/edit"
                  >
                     View / Edit 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Sessions
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/sessions?courseid=CS1231"
                    tmrouterlink="/web/instructor/sessions"
                  >
                     Add 
                  </a>
                </div>
              </span>
              <span
                container="body"
                ngbdropdown=""
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn-course btn btn-primary btn-sm"
                  ngbdropdowntoggle=""
                  type="button"
                >
                  Course
                </button>
                <div
                  class="dropdown-menu"
                  ngbdropdownmenu=""
                >
                  <a
                    class="btn btn-light btn-sm dropdown-item"
                    href="/web/instructor/courses/edit?courseid=CS1231"
                    tmrouterlink="/web/instructor/courses/edit"
                  >
                     View / Edit 
                  </a>
                  <a
                    class="btn-copy-course btn btn-light btn-sm dropdown-item"
                    href="/"
                    ngbtooltip="Copy the course and its corresponding sessions"
                    tmrouterlink="./"
                  >
                     Copy 
                  </a>
                  <a
                    class="btn-delete-course btn btn-light btn-sm dropdown-item"
                    href="/"
                    ngbtooltip="Delete the course and its corresponding students and sessions"
                    tmrouterlink="./"
                  >
                     Delete 
                  </a>
                </div>
              </span>
              <tm-panel-chevron>
                <button
                  aria-expanded="true"
                  aria-label="Expand panel"
                  class="chevron btn-course btn btn-primary btn-sm"
                  type="button"
                >
                  <i
                    class="fas fa-chevron-up"
                    style="color: white;"
                  />
                </button>
              </tm-panel-chevron>
            </div>
          </div>
          <div
            class="card-body padding-0 table-responsive collapse show"
          >
            <tm-loading-retry>
              <div
                aria-hidden="true"
              />
              <tm-sessions-table
                id="sessions-table-0"
              >
                <div
                  class="no-session-message"
                >
                  There are no feedback sessions in this course.
                </div>
              </tm-sessions-table>
            </tm-loading-retry>
          </div>
        </div>
      </div>
    </div>
  </tm-loading-retry>
</tm-instructor-home-page>
`;
